<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.fragments.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAvatarContainer"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_welcome_back"
        style="@style/TextXS10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/welcome_back"
        android:textColor="@color/light_base_1"
        app:layout_constraintStart_toEndOf="@+id/cvAvatarContainer"
        app:layout_constraintTop_toTopOf="@+id/cvAvatarContainer" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextDefault14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fortune Maseko"
        android:textColor="@color/light_base_1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back" />

    <za.co.fortunemaseko.instic.ui.customViews.MedicineProgressCard
        android:id="@+id/medicineProgressCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/menu_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_container" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/menu_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_border_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/textView8"

            style="@style/TextDefault14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="128dp"
            android:text="@string/menu_container_title"
            android:textColor="@color/dark_base_1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/healthFaqsMenuCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/frequently_asked_health_questions_menu_image"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/capsule" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/TextSM12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View frequently asked health questions"
                    android:textColor="@color/dark_base_1" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/medicineRemindersMenuCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/healthFaqsMenuCard"
            app:layout_constraintStart_toStartOf="@+id/healthFaqsMenuCard"
            app:layout_constraintTop_toBottomOf="@id/healthFaqsMenuCard">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/frequently_asked_health_questions_menu_image"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/capsule" />
                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/TextSM12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manage medicine reminders"
                    android:textColor="@color/dark_base_1" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>